Bio, screen name, and profile picture now save upon user logout

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Firebase Twitter</title>
+  <title>CodePen - Firebase Twitter</title>
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/css/bootstrap.min.css'>
 <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css'><link rel="stylesheet" href="./style.css">
 
@@ -35,7 +35,10 @@
   <h1 id="title">
     <span>Welcome to Firebase Twitter!</span>
   </h1>
-  <div id="logout"><button>LOGOUT</button></div>
+  <div id="logout">
+    <div id="hello"></div>
+    <button id="logout2">LOGOUT</button>
+  </div>
   <div id="settings"><button>USER SETTINGS</button></div>
 
   <div id="center"><input placeholder="Tweet" type="text" id="tweet1" size=100></div>
@@ -104,4 +107,3 @@
 
 </body>
 </html>
-
