Changed some styling and users now stay logged in upon page reload

--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,7 @@
     <span>Welcome to Firebase Twitter!</span>
   </h1>
   <div id="center">
-    <span id="login"><button>LOGIN</button></span>
-    <span id="register"><button>REGISTER</button></span>
+    <span id="login" style="position: relative;top: -5px;"><button>LOGIN</button></span>
   </div>
   <div id="center">
     <input placeholder="E-mail" type="text" id="email1">
@@ -28,6 +27,8 @@
   
   <div style="display: none;"><img src="https://twirpz.files.wordpress.com/2015/06/twitter-avi-gender-balanced-figure.png" id="fileupload2"/></div>
   <br><br>
+  <div id="center"><span id="register"><button>REGISTER</button></div></span>
+  <br><br><br>
   <div id="center"><button id="forgot">Forgot Password?</button></div>
 </div>
 
